Revision history for Perl extension Bio::Graphics.
 
2.15
     - Fixed documentation bug: sort_order options to sort by feature length should be
       "longest" and "shortest" rather than "longer and "shorter".

2.14
     - Fixes to the way that "fast bump" works so that tracks never fast bump.
       This fixes problems when using groups to simulate subtracks, and the
       groups are of different heights.
     - The group glyph will now add the group labels to the list of track keys
       stored in the panel and retrieved from the call to $panel->key_boxes().

2.13
     - Changed default namespace for callbacks to make them portable across freeze/thaw
       cycles.

2.12 Tue Aug 31 10:42:06 EDT 2010
     - Created a read_pairs glyph that contains the settings most often used for SAM paired end reads/mate pairs;
       this fixes the mate-pairs overlap bug.
     - xyplot glyph now obeys "flip" setting.

2.11 Tue Jun 29 15:37:03 EDT 2010
     - Cleaned up stylesheet-based rendering of features when the main glyph has a type of
     "hat" and subfeatures overlap with each other.  This occurred when rendering certain
     DAS sources.

2.10 Mon May 24 13:58:26 PDT 2010
     - Fixed a long-standing but rarely-seen bug in layout algorithm that
       caused some features to be displaced downward further than they should
       be.
     - Added support for labeling groups (on the left side). This is used by
       GBrowse to create subtracks.

2.09 Fri May 14 11:46:51 EDT 2010
     - Fixed Bio::Graphics::FeatureFile cached callbacks so that they are evaluated
       in the same package as they were when the file was originally evaluated and cached.

2.08 Thu May 13 17:06:29 EDT 2010
     - Fixed Bio::Graphics::FeatureFile init_code so that it is reinvoked when retrieving a 
       cached copy of parsed featurefiles.

2.07 Sun May  9 11:56:10 EDT 2010
     - Added FeatureFile->cachedir argument to help with GBrowse tests.

2.06 Wed May  5 00:51:00 EDT 2010