@@ -1,4 +1,3 @@
-Build.PL
 Changes
 DISCLAIMER.txt
 eg/feature_data.gff
@@ -63,6 +62,7 @@ lib/Bio/Graphics/Glyph/processed_transcript.pm
 lib/Bio/Graphics/Glyph/protein.pm
 lib/Bio/Graphics/Glyph/ragged_ends.pm
 lib/Bio/Graphics/Glyph/rainbow_gene.pm
+lib/Bio/Graphics/Glyph/read_pair.pm
 lib/Bio/Graphics/Glyph/redgreen_box.pm
 lib/Bio/Graphics/Glyph/redgreen_segment.pm
 lib/Bio/Graphics/Glyph/repeating_shape.pm
@@ -89,6 +89,7 @@ lib/Bio/Graphics/Glyph/transcript2.pm
 lib/Bio/Graphics/Glyph/translation.pm
 lib/Bio/Graphics/Glyph/triangle.pm
 lib/Bio/Graphics/Glyph/two_bolts.pm
+lib/Bio/Graphics/Glyph/vista_plot.pm
 lib/Bio/Graphics/Glyph/wave.pm
 lib/Bio/Graphics/Glyph/weighted_arrow.pm
 lib/Bio/Graphics/Glyph/whiskerplot.pm
@@ -98,13 +99,18 @@ lib/Bio/Graphics/Glyph/wiggle_minmax.pm
 lib/Bio/Graphics/Glyph/wiggle_whiskers.pm
 lib/Bio/Graphics/Glyph/wiggle_xyplot.pm
 lib/Bio/Graphics/Glyph/xyplot.pm
+lib/Bio/Graphics/Layout.pm
 lib/Bio/Graphics/Panel.pm
 lib/Bio/Graphics/Pictogram.pm
 lib/Bio/Graphics/RendererI.pm
 lib/Bio/Graphics/Util.pm
 lib/Bio/Graphics/Wiggle.pm
 lib/Bio/Graphics/Wiggle/Loader.pm
+Makefile.PL
 MANIFEST
+MANIFEST.bak
+MANIFEST.SKIP
+META.yml
 README
 README.bioperl
 scripts/contig_draw.pl
@@ -120,6 +126,8 @@ t/data/t1/version1.png
 t/data/t1/version10.png
 t/data/t1/version11.gif
 t/data/t1/version11.png
+t/data/t1/version12.gif
+t/data/t1/version12.png
 t/data/t1/version2.gif
 t/data/t1/version2.png
 t/data/t1/version3.gif
@@ -144,6 +152,8 @@ t/data/t2/version16.gif
 t/data/t2/version16.png
 t/data/t2/version17.gif
 t/data/t2/version17.png
+t/data/t2/version18.gif
+t/data/t2/version18.png
 t/data/t2/version2.gif
 t/data/t2/version2.png
 t/data/t2/version3.gif
@@ -162,6 +172,8 @@ t/data/t3/version11.gif
 t/data/t3/version11.png
 t/data/t3/version12.gif
 t/data/t3/version12.png
+t/data/t3/version13.gif
+t/data/t3/version13.png
 t/data/t3/version2.gif
 t/data/t3/version2.png
 t/data/t3/version3.gif
@@ -175,5 +187,3 @@ t/data/t3/version8.png
 t/data/t3/version9.png
 t/data/wig_data.wig
 t/Wiggle.t
-Makefile.PL
-META.yml
