@@ -3,6 +3,11 @@ Revision history for Perl extension Bio::Graphics.
 2.15
      - Fixed documentation bug: sort_order options to sort by feature length should be
        "longest" and "shortest" rather than "longer and "shorter".
+     - Improved layout algorithm, achieving speedup of ~4x on busy tracks.
+     - Fixed font color problems when displaying multiple alignments at DNA level in
+       the segments glyph.
+     - Fixed problem of DNA alignment indels disappearing from view when they span entire region.
+     - Fixed problem of mismatch and indel colors leaking off ends of feature arrows.
 
 2.14
      - Fixes to the way that "fast bump" works so that tracks never fast bump.
